--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ anyio==4.0.0
 asgiref==3.7.2
 click==8.1.7
 Django==4.2.4
+gunicorn==21.2.0
 h11==0.14.0
 httptools==0.6.0
 idna==3.4
+packaging==23.1
 python-dotenv==1.0.0
 PyYAML==6.0.1
 sniffio==1.3.0
